# elsa_tiago_gym

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: environment_variables.yaml  tiago_train_params.yaml
launch/: activate_head.launch  launch_simulation.launch  multi_gazebo.launch  start_gym.launch
scripts/: look_hand.py  test.py  train.py
src/elsa_tiago_gym/: parallel_sim_utils.py  tiago_env.py  tiago_simple_env.py  trajectory_publisher.py  utils.py  utils_parallel.py  utils_ros_gym.py
src/simulations/: gazebo_simulation.sh  kill_simulations.sh  run_simulation_master.sh  run_simulations_parallel.sh  set_sim_velocity.sh  set_velocity.sh
src/tiago_gym/: parallel_sim_utils.py  tiago_env.py  tiago_reach_env.py  tiago_simple_env.py  utils.py  utils_parallel.py
